@@ -64,3 +64,5 @@ pig.tez.opt.union.unsupported.storefuncs=org.apache.hcatalog.pig.HCatStorer,org.
 pig.sort.readonce.loadfuncs=org.apache.pig.backend.hadoop.hbase.HBaseStorage,org.apache.pig.backend.hadoop.accumulo.AccumuloStorage
 
 pig.ats.enabled=true
+
+pig.tez.configure.am.memory=true
