@@ -30,6 +30,8 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-4948: Pig on Tez AM use too much memory on a small cluster (daijy)
+
 PIG-4942: Fix mvn-install ant target (petersla via daijy)
 
 PIG-4949: Fix registering jar in S3 which was broken by PIG-4417 in Pig 0.16 (yangyishan0901m via daijy)
